binrw/tests/ui/invalid_offset_type.stderr
error[E0308]: mismatched types
   --> tests/ui/invalid_offset_type.rs:6:19
    |
6   |     #[br(offset = a)]
    |                   ^
    |                   |
    |                   expected `u64`, found `u8`
    |                   arguments to this method are incorrect
    |
note: associated function defined here
   --> src/file_ptr.rs
    |
    |     pub offset: u64,
    |         ^^^^^^
help: you can convert a `u8` to a `u64`
    |
6   |     #[br(offset = a.into())]
    |                    +++++++

error[E0308]: mismatched types
   --> tests/ui/invalid_offset_type.rs:8:25
    |
8   |     #[br(offset_after = d)]
    |                         ^
    |                         |
    |                         expected `u64`, found `u8`
    |                         arguments to this method are incorrect
    |
note: associated function defined here
   --> src/file_ptr.rs
    |
    |     pub offset: u64,
    |         ^^^^^^
help: you can convert a `u8` to a `u64`
    |
8   |     #[br(offset_after = d.into())]
    |                          +++++++
